--- a/0910/portfolio/css/main.css
+++ b/0910/portfolio/css/main.css
@@ -1,45 +1,87 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
+
+body {
+    background-color: #f5f5f5;
+    color: #2f2f2f;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 16px;
+}
+
+#wrap {
+    width: 85%;
     margin: 0 auto;
 }
 
-body {
-    width: 80%;
-}
-
 header {
-    display: flex;
-    margin: 30px;
-    justify-content: space-around;
+    text-align: center;
 }
 
-.list {
-    display: flex;
+h2, .list-container {
+    display: inline-block;
 }
+
+.list-container {
+    margin-top: 20px;
+}
+
+.list li {
+    display: inline;
+}
+
 .list li:not(:last-child) {
     margin-right: 30px;
 }
 
-.container {
+/* .intro {
     display: flex;
     flex-direction: column;
-}
+    justify-content: center;
+} */
 
 .mid {
     display: flex;
+    padding: 50px 0px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+section {
+    display: inline-block;
+    background-color: white;
+    border-radius: 20px;
+    padding: 20px 30px 20px 30px;
+    box-shadow: 2px 4px 12px #00000014;
 }
 
 article {
-    border: 1px solid #bbb;
-    border-radius: 15px;
-    padding: 15px;
-    margin: 15px 0;
     line-height: 30px;
+    padding: 15px;
+    text-align: left;
 }
 
 article li::marker {
     content: '✅ ';
 }
 
-.imgBox {
-    display: flex;
+.myinfo {
+    font-size: 14px;
+    padding: 50px;
+}
+
+img {
+    border-radius: 20px;
+    box-shadow: 2px 4px 12px #00000014;
+}
+
+table {
+    padding-top: 15px;
+}
+
+
+td:first-child {
+    font-weight: bold;
+}
+td:not(:last-child) {
+    padding-right: 20px;
 }
