--- a/0910/portfolio/css/main.css
+++ b/0910/portfolio/css/main.css
@@ -20,6 +20,11 @@ h2, .list-container {
     display: inline-block;
 }
 
+a {
+    text-decoration: none;
+    color: #2f2f2f;
+}
+
 .list-container {
     margin-top: 20px;
 }
