--- a/0910/portfolio/css/main.css
+++ b/0910/portfolio/css/main.css
@@ -5,6 +5,8 @@ body {
     color: #2f2f2f;
     font-family: 'Noto Sans KR', sans-serif;
     font-size: 16px;
+    margin: auto;
+    height: 200vh;
 }
 
 #wrap {
@@ -89,4 +91,14 @@ td:first-child {
 }
 td:not(:last-child) {
     padding-right: 20px;
+}
+
+#content {
+    display: flex;
+    justify-content: center;
+}
+
+iframe {
+    width: 1200px;
+    height: 100vh;
 }
