포폴에 적을게 없누

--- a/0910/portfolio/css/main.css
+++ b/0910/portfolio/css/main.css
@@ -76,7 +76,7 @@ article li::marker {
     padding: 50px;
 }
 
-img {
+.profileimg {
     border-radius: 20px;
     box-shadow: 2px 4px 12px #00000014;
 }
