--- a/0910/portfolio/css/main.css
+++ b/0910/portfolio/css/main.css
@@ -45,7 +45,7 @@ a {
     justify-content: center;
 } */
 
-.mid {
+#mid {
     display: flex;
     padding: 50px 0px;
     flex-wrap: wrap;
@@ -86,19 +86,39 @@ table {
 }
 
 
-td:first-child {
+.myinfolist:first-child {
     font-weight: bold;
 }
-td:not(:last-child) {
+.myinfolist:not(:last-child) {
     padding-right: 20px;
 }
 
-#content {
+#project {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
-iframe {
-    width: 1200px;
-    height: 100vh;
+.uselang {
+    display: inline-block;
+    padding: 5px 8px 5px 8px;
+    background-color: white;
+    border-radius: 8px;
 }
+
+.title {
+    font-size: 18px;
+    font-weight: bold;
+    padding: 0px 20px 0px 20px;
+}
+
+.desc {
+    font-size: 14px;
+    padding: 20px 20px 0px 20px;
+}
+
+#project tr {
+    border-collapse: collapse;
+    border-bottom: 1px solid black;
+}
+
